handle change page and UI

--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>Shoplist A Ecommerce Category Flat Bootstrap Responsive Website Template | Home :: w3layouts</title>
+  <title>Luxury Fashion Boutique</title>
   <link href="/css/bootstrap.css" rel="stylesheet" type="text/css" media="all">
   <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
   <script src="/js/jquery-1.11.0.min.js"></script>
@@ -137,6 +137,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
   </div>
   </div>
   <!--footer end here-->
+  <script src="/js/productPagination.js"></script>
 </body>
 
 </html>
