--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1242,17 +1242,14 @@ span.glyphicon.glyphicon-share-alt {
 	height: 100%;
 }
 /*--end scrollpane--*/
-.pagination .page-list {
+.men-pagination .page-list {
     display: flex;
     justify-content: center;
     align-items: center;
     list-style-type: none;
 }
-.pagination .page-list .page {
-    
-    
-}
-.pagination .page-list .page a {
+
+.men-pagination .page-list .page a {
     text-decoration: none;
     color: rgba(0, 0, 0, 0.466);
     min-width: 2.3em;
@@ -1266,19 +1263,50 @@ span.glyphicon.glyphicon-share-alt {
     border: 1px solid rgba(0, 0, 0, 0.342);
     border-radius: 3px;
 }
-.pagination .page-list .page:first-child {
+.men-pagination .page-list .page:first-child {
     margin-left: 0;
 }
-.pagination .page-list .page:hover a{
+.men-pagination .page-list .page:hover a{
     opacity: 0.7;
 }
-
 .current-page a  {
     background-color: #EA552B;
     border: none !important;
+    color: white !important;
 }
 
+.women-pagination .page-list {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    list-style-type: none;
+}
 
+.women-pagination .page-list .page a {
+    text-decoration: none;
+    color: rgba(0, 0, 0, 0.466);
+    min-width: 2.3em;
+    height: 1.7em;
+    display: block;
+    margin-left: 1em;
+    text-align: center;
+    line-height: 1.7em;
+    font-size: 1em;  
+    cursor: pointer;
+    border: 1px solid rgba(0, 0, 0, 0.342);
+    border-radius: 3px;
+}
+.women-pagination .page-list .page:first-child {
+    margin-left: 0;
+}
+.women-pagination .page-list .page:hover a{
+    opacity: 0.7;
+}
+.current-page a  {
+    background-color: #EA552B;
+    border: none !important;
+    color: white !important;
+}
 
 
 /*--product end her--*/
