--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1242,20 +1242,20 @@ span.glyphicon.glyphicon-share-alt {
 	height: 100%;
 }
 /*--end scrollpane--*/
-.men-pagination .page-list {
+.pagination .page-list {
     display: flex;
     justify-content: center;
     align-items: center;
     list-style-type: none;
 }
 
-.men-pagination .page-list .page a {
+.pagination .page-list .page a {
     text-decoration: none;
     color: rgba(0, 0, 0, 0.466);
     min-width: 2.3em;
     height: 1.7em;
     display: block;
-    margin-left: 1em;
+    margin-left: 0.5em;
     text-align: center;
     line-height: 1.7em;
     font-size: 1em;  
@@ -1263,10 +1263,10 @@ span.glyphicon.glyphicon-share-alt {
     border: 1px solid rgba(0, 0, 0, 0.342);
     border-radius: 3px;
 }
-.men-pagination .page-list .page:first-child {
+.pagination .page-list .page:first-child {
     margin-left: 0;
 }
-.men-pagination .page-list .page:hover a{
+.pagination .page-list .page:hover a{
     opacity: 0.7;
 }
 .current-page a  {
@@ -1274,41 +1274,6 @@ span.glyphicon.glyphicon-share-alt {
     border: none !important;
     color: white !important;
 }
-
-.women-pagination .page-list {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    list-style-type: none;
-}
-
-.women-pagination .page-list .page a {
-    text-decoration: none;
-    color: rgba(0, 0, 0, 0.466);
-    min-width: 2.3em;
-    height: 1.7em;
-    display: block;
-    margin-left: 1em;
-    text-align: center;
-    line-height: 1.7em;
-    font-size: 1em;  
-    cursor: pointer;
-    border: 1px solid rgba(0, 0, 0, 0.342);
-    border-radius: 3px;
-}
-.women-pagination .page-list .page:first-child {
-    margin-left: 0;
-}
-.women-pagination .page-list .page:hover a{
-    opacity: 0.7;
-}
-.current-page a  {
-    background-color: #EA552B;
-    border: none !important;
-    color: white !important;
-}
-
-
 /*--product end her--*/
 /*--single start here--*/
 .single {
