--- a/views/product/sale.hbs
+++ b/views/product/sale.hbs
@@ -17,7 +17,8 @@
                                             name="checkbox"><i></i>Handbag</label>
                                     <label class="checkbox"><input type="checkbox"
                                             name="checkbox"><i></i>Bracelet</label>
-                                    <label class="checkbox"><input type="checkbox" name="checkbox"><i></i>Watche</label>
+                                    <label class="checkbox"><input type="checkbox" name="checkbox"><i></i>Wrist
+                                        watch</label>
                                 </div>
                             </div>
                         </section>
@@ -70,137 +71,44 @@
                     <button class="filter-button">Sort</button>
                 </div>
             </div>
+            <div class="col-md-9 product-block">
+                {{#each products}}
+                <div class="col-md-4 home-grid">
+                    <div class="home-product-main">
+                        <div class="home-product-top">
+                            <a href={{this.slug}}><img src={{this.image.[0]}} alt={{this.name}}
+                                    class="img-responsive zoom-img"></a>
+                        </div>
+                        <div class="home-product-bottom">
+                            <h3 style="height: 3em; text-transform: uppercase;"><a href={{this.slug}}>{{this.name}}</a>
+                            </h3>
+                            <p style="color: black; font-size: 1.3em">Price: {{this.price}}$</p>
+                        </div>
+                        <div class="srch">
+                            <span>{{this.sale}}</span>
+                        </div>
+                    </div>
+                </div>
+                {{/each}}
+                <div class="clearfix"> </div>
+            </div>
         </div>
-        <div class="col-md-9 product-block">
-            <div class="col-md-4 home-grid">
-                <div class="home-product-main">
-                    <div class="home-product-top">
-                        <a href="/product"><img src="/images/h28.jpg" alt="" class="img-responsive zoom-img"></a>
-                    </div>
-                    <div class="home-product-bottom">
-                        <h3><a href="/product">Smart Shopping</a></h3>
-                        <p>Explore Now</p>
-                    </div>
-                    <div class="srch">
-                        <span>$200</span>
-                    </div>
-                </div>
+
+        {{!-- pagination --}}
+        <div class="col-md-3"></div>
+        <div class="col-md-9">
+            <div class="pagination col-md-12">
+                <ul class="page-list">
+                    <li class="page"><a href="#">&lt;&lt;</a></li>
+                    {{#each pages}}
+                    <li class=" page"><a href={{this.pageA}}>{{this.page}}</a></li>
+                    {{/each}}
+                    <li class="page"><a href="#">&gt;&gt;</a></li>
+                </ul>
             </div>
-            <div class="col-md-4 home-grid">
-                <div class="home-product-main">
-                    <div class="home-product-top">
-                        <a href="/product"><img src="/images/h29.jpg" alt="" class="img-responsive zoom-img"></a>
-                    </div>
-                    <div class="home-product-bottom">
-                        <h3><a href="/product">Smart Shopping</a></h3>
-                        <p>Explore Now</p>
-                    </div>
-                    <div class="srch">
-                        <span>$200</span>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-4 home-grid">
-                <div class="home-product-main">
-                    <div class="home-product-top">
-                        <a href="/product"><img src="/images/h30.jpg" alt="" class="img-responsive zoom-img"></a>
-                    </div>
-                    <div class="home-product-bottom">
-                        <h3><a href="/product">Smart Shopping</a></h3>
-                        <p>Explore Now</p>
-                    </div>
-                    <div class="srch">
-                        <span>$200</span>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-4 home-grid">
-                <div class="home-product-main">
-                    <div class="home-product-top">
-                        <a href="/product"><img src="/images/h31.jpg" alt="" class="img-responsive zoom-img"></a>
-                    </div>
-                    <div class="home-product-bottom">
-                        <h3><a href="/product">Smart Shopping</a></h3>
-                        <p>Explore Now</p>
-                    </div>
-                    <div class="srch">
-                        <span>$200</span>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-4 home-grid">
-                <div class="home-product-main">
-                    <div class="home-product-top">
-                        <a href="/product"><img src="/images/h32.jpg" alt="" class="img-responsive zoom-img"></a>
-                    </div>
-                    <div class="home-product-bottom">
-                        <h3><a href="/product">Smart Shopping</a></h3>
-                        <p>Explore Now</p>
-                    </div>
-                    <div class="srch">
-                        <span>$200</span>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-4 home-grid">
-                <div class="home-product-main">
-                    <div class="home-product-top">
-                        <a href="/product"><img src="/images/h33.jpg" alt="" class="img-responsive zoom-img"></a>
-                    </div>
-                    <div class="home-product-bottom">
-                        <h3><a href="/product">Smart Shopping</a></h3>
-                        <p>Explore Now</p>
-                    </div>
-                    <div class="srch">
-                        <span>$200</span>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-4 home-grid">
-                <div class="home-product-main">
-                    <div class="home-product-top">
-                        <a href="/product"><img src="/images/h34.jpg" alt="" class="img-responsive zoom-img"></a>
-                    </div>
-                    <div class="home-product-bottom">
-                        <h3><a href="/product">Smart Shopping</a></h3>
-                        <p>Explore Now</p>
-                    </div>
-                    <div class="srch">
-                        <span>$200</span>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-4 home-grid">
-                <div class="home-product-main">
-                    <div class="home-product-top">
-                        <a href="/product"><img src="/images/h35.jpg" alt="" class="img-responsive zoom-img"></a>
-                    </div>
-                    <div class="home-product-bottom">
-                        <h3><a href="/product">Smart Shopping</a></h3>
-                        <p>Explore Now</p>
-                    </div>
-                    <div class="srch">
-                        <span>$200</span>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-4 home-grid">
-                <div class="home-product-main">
-                    <div class="home-product-top">
-                        <a href="/product"><img src="/images/h36.jpg" alt="" class="img-responsive zoom-img"></a>
-                    </div>
-                    <div class="home-product-bottom">
-                        <h3><a href="/product">Smart Shopping</a></h3>
-                        <p>Explore Now</p>
-                    </div>
-                    <div class="srch">
-                        <span>$200</span>
-                    </div>
-                </div>
-            </div>
-            <div class="clearfix"> </div>
+
         </div>
+        <div id="current-page" style="display: none;" name={{currentPage}}></div>
     </div>
-</div>
 </div>
 <!--product end here-->
