--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -75,7 +75,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
         <div class="header-right">
           <div class="search">
             <div class="search-text">
-              <input class="serch" type="text" placeholder="Search" onfocus="this.value = '';"
+              <input id="serch" type="text" placeholder="Search" onfocus="this.value = '';"
                 onblur="if (this.value == '') {this.value = 'Search';}" />
             </div>
             <div class="cart box_1" style="margin-top: 15px;">
@@ -141,6 +141,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
   </div>
   <!--footer end here-->
   <script src="/js/productPagination.js"></script>
+  <script src="/js/productSearch.js"></script>
 </body>
 
 </html>
