Login, Logout, Show Infomation

--- a/views/user/user.hbs
+++ b/views/user/user.hbs
@@ -4,11 +4,11 @@
             <h1>My account</h1>
             <h2>Update information</h2>
             <form>
-                <input type="email" placeholder="E-mail" class="myaccount-one-line">
-                <input type="text" placeholder="First name" class="myaccount-two-row">
-                <input type="text" placeholder="Last name" class="myaccount-two-row no-margin">
-                <input type="text" placeholder="Phone numbers" class="myaccount-two-row">
-                <input type="text" placeholder="Full address" class="myaccount-two-row no-margin">
+                <input type="email" placeholder="E-mail" class="myaccount-one-line" value="{{user.email}}">
+                <input type="text" placeholder="First name" class="myaccount-two-row" value="{{user.firstName}}">
+                <input type="text" placeholder="Last name" class="myaccount-two-row no-margin" value="{{user.lastName}}">
+                <input type="text" placeholder="Phone numbers" class="myaccount-two-row" value="{{user.number}}">
+                <input type="text" placeholder="Full address" class="myaccount-two-row no-margin" value="{{user.address}}">
                 <input type="submit" value="Save">
             </form>
         </div>
