--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -89,10 +89,12 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
               </a>
               {{!-- <p><a href="javascript:;" class="simpleCart_empty">Empty Cart</a></p> --}}
             </div>
+
+            {{#if user}}
             <div class="head-signin dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown"
                 style="font-family: 'Oswald', sans-serif; text-decoration: none; color:black; font-size: 0.8em"><i
-                  class="hd-dign"></i>Sign in</a>
+                  class="hd-dign"></i>{{user.lastName}}</a>
               <ul class="dropdown-menu user-dropdown" style="min-width: 160px;">
                 <div class="row">
                   <div class="row-sm-3">
@@ -101,7 +103,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                       <li><a href="/user/password">Change password</a></li>
                       <li><a href="/user/arriving">Arriving (3)</a></li>
                       <li><a href="/user/history">History</a></li>
-                      <li><a href="#">Log out <span class="glyphicon glyphicon-log-in" aria-hidden="true"
+                      <li><a href="/logout">Log out <span class="glyphicon glyphicon-log-in" aria-hidden="true"
                             style="padding-left: 8px"></span></a>
                       </li>
                     </ul>
@@ -109,6 +111,12 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                 </div>
               </ul>
             </div>
+            {{else}}
+            <a href="/login" class="dropdown-toggle"
+                style="font-family: 'Oswald', sans-serif; text-decoration: none; color:black; font-size: 0.8em"><i
+                  class="hd-dign"></i>Sign in</a>
+            {{/if}}
+            
             <div class="clearfix"> </div>
           </div>
         </div>
