--- a/views/login.hbs
+++ b/views/login.hbs
@@ -5,10 +5,13 @@
             <h1>Login</h1>
             <div class="col-md-6 login-left">
                 <h2>Existing User</h2>
-                <form>
-                    <input type="email" placeholder="Email" required="">
-                    <input type="password" placeholder="Password" required="">
+                <form action="#" method="post">
+                    <input type="email" name="email" placeholder="Email" required="">
+                    <input type="password" name="password" placeholder="Password" required="">
                     <input type="submit" value="Login">
+                    {{#if wrongLogin}}
+                    <h4>Wrong password or email</h4>
+                    {{/if}}
                 </form>
             </div>
             <div class="col-md-6 login-right">
