--- a/views/login.hbs
+++ b/views/login.hbs
@@ -10,7 +10,7 @@
                     <input type="password" name="password" placeholder="Password" required="">
                     <input type="submit" value="Login">
                     {{#if wrongLogin}}
-                    <h4>Wrong password or email</h4>
+                    <h4 style="color:red">Wrong password or email</h4>
                     {{/if}}
                 </form>
             </div>
