--- a/views/signup.hbs
+++ b/views/signup.hbs
@@ -5,14 +5,18 @@
             <h1>Sign up</h1>
             <h2>Informations</h2>
             <form action="/signup" method="post">
-            {{#if emailExisted}}
-                <h4 style="color:red">Email's existed</h4>
-                                {{/if}}
+                    {{#if emailExisted}}
+                        <h4 style="color:red">Email's existed</h4>
+                    {{/if}}
                 <input type="email" name="email" placeholder="E-mail" class="signup-one-line">
-                {{#if passwordNotMatch}}
-                <h4 style="color:red">Password does not match</h4>
-                {{/if}}
+                    {{#if passwordShort}}
+                        <h4 style="color:red">Password is short (at least 8 characters)</h4>
+                    {{/if}}
+                    {{#if passwordNotMatch}}
+                    <h4 style="color:red">Password does not match</h4>
+                    {{/if}}
                 <input type="password" name="password" placeholder="Password" required="" class="signup-two-row" />
+                    
                 <input type="password" name="confirmPassword" placeholder="Confirm Password" required="" class="no-margin signup-two-row" />
                 <input type="text" name="firstName" placeholder="First name" class="signup-two-row">
                 <input type="text" name="lastName" placeholder="Last name" class="signup-two-row no-margin">
