--- a/views/user/password.hbs
+++ b/views/user/password.hbs
@@ -2,11 +2,22 @@
     <div class="container">
         <div class="password-main">
             <h1>Change password</h1>
-            <form>
-                <input type="password" placeholder="Current password" class="password-input password-one-line">
-                <input type="password" placeholder="New password" class="password-input password-one-line">
-                <input type="password" placeholder="Comfirm new password" class="password-input password-one-line">
-                <input type="submit" value="Change">
+            <form style="font-size: 1.3em;">
+                <div class="row">
+
+                    <div class="col-md-12">
+                        <input type="password" placeholder="Current password" class="password-input password-one-line">
+                    </div>
+                    <div class="col-md-12">
+                        <input type="password" placeholder="New password" class="password-input password-one-line">
+                    </div>
+                    <div class="col-md-12">
+                        <input type="password" placeholder="Comfirm new password"
+                            class="password-input password-one-line">
+                    </div>
+                    <input type="submit" value="Change">
+
+                </div>
             </form>
         </div>
     </div>
