--- a/views/login.hbs
+++ b/views/login.hbs
@@ -7,21 +7,23 @@
                 <h2>Existing User</h2>
                 <form action="#" method="post">
                     <input type="email" name="email" placeholder="Email" required="">
-                    <input type="password" name="password" placeholder="Password" required="">
-                    <input type="submit" value="Login">
+                    <input style="margin-bottom: 3em;" type="password" name="password" placeholder="Password"
+                        required="">
+
                     {{#if wrongLogin}}
                     <h4 style="color:red">Wrong password or email</h4>
                     {{/if}}
                     {{#if bannedLogin}}
                     <h4 style="color:red">Account is being banned</h4>
                     {{/if}}
+                    <input type="submit" value="Login">
                 </form>
             </div>
             <div class="col-md-6 login-right">
                 <h3>New User?</h3>
                 <p>If this is your first time buying in this website. Please register an account to receive our customer
                     policy</p>
-                <a href="/signup" class="login-btn">Create an Account </a>
+                <a href="/login/signup" class="login-btn">Create an Account </a>
             </div>
             <div class="clearfix"> </div>
         </div>
