--- a/views/product/men.hbs
+++ b/views/product/men.hbs
@@ -76,7 +76,7 @@
                 <div class="col-md-4 home-grid">
                     <div class="home-product-main">
                         <div class="home-product-top">
-                            <a href={{this.slug}}><img src={{this.image.[0]}} alt={{this.name}}
+                            <a href={{this.slug}}><img src={{this.image.[0].secure_url}} alt={{this.name}}
                                     class="img-responsive zoom-img"></a>
                         </div>
                         <div class="home-product-bottom">
