--- a/views/product/product.hbs
+++ b/views/product/product.hbs
@@ -8,7 +8,7 @@
                         <ul class="slides">
                             {{#each detail.image}}
                             <li data-thumb={{this}} style="margin-bottom: 2em;">
-                                <div class="thumb-image"> <img src={{this}} data-imagezoom="true"
+                                <div class="thumb-image"> <img src={{this.secure_url}} data-imagezoom="true"
                                         class="img-responsive"> </div>
                             </li>
                             {{/each}}
@@ -45,7 +45,7 @@
                 <div class="col-md-3 home-grid">
                     <div class="home-product-main">
                         <div class="home-product-top">
-                            <a href={{this.slug}}><img src={{this.image.[0]}} alt=""
+                            <a href={{this.slug}}><img src={{this.image.[0].secure_url}} alt=""
                                     class="img-responsive zoom-img"></a>
                         </div>
                         <div class="home-product-bottom">
