--- a/views/signup.hbs
+++ b/views/signup.hbs
@@ -4,24 +4,28 @@
         <div class="signup-main">
             <h1>Sign up</h1>
             <h2>Informations</h2>
-            <form action="/signup" method="post">
-                    {{#if emailExisted}}
-                        <h4 style="color:red">Email's existed</h4>
-                    {{/if}}
+            <form action="/login/signup" method="POST">
                 <input type="email" name="email" placeholder="E-mail" class="signup-one-line">
-                    {{#if passwordShort}}
-                        <h4 style="color:red">Password is short (at least 8 characters)</h4>
-                    {{/if}}
-                    {{#if passwordNotMatch}}
-                    <h4 style="color:red">Password does not match</h4>
-                    {{/if}}
                 <input type="password" name="password" placeholder="Password" required="" class="signup-two-row" />
-                    
-                <input type="password" name="confirmPassword" placeholder="Confirm Password" required="" class="no-margin signup-two-row" />
+
+                <input type="password" name="confirmPassword" placeholder="Confirm Password" required=""
+                    class="no-margin signup-two-row" />
                 <input type="text" name="firstName" placeholder="First name" class="signup-two-row">
                 <input type="text" name="lastName" placeholder="Last name" class="signup-two-row no-margin">
                 <input type="text" name="number" placeholder="Phone numbers" class="signup-two-row">
                 <input type="text" name="address" placeholder="Full address" class="signup-two-row no-margin">
+
+                {{#if emailExisted}}
+                <h4 style="color:red; text-align:right; margin-top: 1em;">Email has already been used</h4>
+                {{/if}}
+
+                {{#if passwordShort}}
+                <h4 style="color:red; text-align:right; margin-top: 1em;">Password must contain at least 8 characters)
+                </h4>
+                {{/if}}
+                {{#if passwordNotMatch}}
+                <h4 style="color:red; text-align:right; margin-top: 1em;">Password does not match</h4>
+                {{/if}}
                 <input type="submit" value="Submit">
             </form>
         </div>
