--- a/views/user/password.hbs
+++ b/views/user/password.hbs
@@ -2,19 +2,29 @@
     <div class="container">
         <div class="password-main">
             <h1>Change password</h1>
-            <form style="font-size: 1.3em;">
+            <form style="font-size: 1.3em;" action="/user/password/{{user._id}}" method="POST">
                 <div class="row">
 
                     <div class="col-md-12">
-                        <input type="password" placeholder="Current password" class="password-input password-one-line">
+                        <input type="password" placeholder="Current password" class="password-input password-one-line"
+                            name="oldPassword">
                     </div>
                     <div class="col-md-12">
-                        <input type="password" placeholder="New password" class="password-input password-one-line">
+                        <input type="password" placeholder="New password" class="password-input password-one-line"
+                            name="newPassword">
                     </div>
                     <div class="col-md-12">
                         <input type="password" placeholder="Comfirm new password"
-                            class="password-input password-one-line">
+                            class="password-input password-one-line" name="rePassword" style="margin-bottom: 2em;">
                     </div>
+
+                    {{#if message}}
+                    <div class="mb-2 text-right" id="valid-text" style="color: red;">{{message}}</div>
+                    {{/if}}
+
+                    {{#if success}}
+                    <div class="mb-2 text-right" id="valid-text" style="color: rgb(6, 87, 6);">{{success}}</div>
+                    {{/if}}
                     <input type="submit" value="Change">
 
                 </div>
