refactor, edit login register page, add nodemailer to verify

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -31,6 +31,8 @@ a:hover {
 /*--header start here--*/
 #sign-in-text {
     color: black;
+    font-family: 'Oswald', sans-serif;
+    font-size: 0.9em;
 }
 #sign-in-text:hover {
     opacity: 0.5;
